webapps/k8s/webapps.dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapps
  template:
    metadata:
      labels:
        app: webapps
    spec:
      containers:
      - name: webapps
        image: webapps-service
        imagePullPolicy: Never
        ports:
        - containerPort: 1111
