webapps/k8s/webapps.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapps-svc
spec:
  ports:
  - port: 80
    targetPort: 1111
    protocol: TCP
    name: http
  selector:
    app: webapps
