webapps/k8s/webapps.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapps-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/http2-push-preload: "true"
spec:
  rules:
  - host: app.microfrontend
    http:
      paths:
        - backend:
            serviceName: webapps-svc
            servicePort: 1111
